# Vulkan-Renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
VulkanRenderer/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  CommandQueues.h  CommandQueues.hpp  DepthImage.cpp  DepthImage.h  DepthImage.hpp  DeviceExtensions.h  DeviceExtensions.hpp  HelloTriangleApplication.cpp  HelloTriangleApplication.h  HelloTriangleApplication.hpp  IOHelper.h  IOHelper.hpp  Image.cpp  Image.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  PhysicalDeviceHelper.hpp  Renderer.cpp  Renderer.hpp  Shader.h  Shader.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  SwapChain.h  SwapChain.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  TextureImage.cpp  TextureImage.hpp  Uniforms.h  Uniforms.hpp  (+10 more)
VulkanRenderer/Meshes/: Licence.txt
VulkanRenderer/Shaders/: compile.bat  default.slang  default.spv  hello-world.slang  hello-world.spv  vert.spv
VulkanRenderer/Shaders/BRDF/: basicBRDFs.slang  combinedBRDFs.slang  pbr.slang  phong.slang  topLayerBSDF.slang
VulkanRenderer/Shaders/Core/: brdf.slang  geometry.slang  globalData.slang  indirectLighting.slang  largeBlock.slang  lights.slang  mainRaster.slang  material.slang
VulkanRenderer/Shaders/Materials/: basicMaterials.slang  demoMaterials.slang
VulkanRenderer/Shaders/Triangle/: Shader.frag  Shader.vert
VulkanRenderer/Source/Asset/: AssetBase.cpp  AssetBase.hpp  Material.cpp  Material.hpp  MaterialInstance.cpp  MaterialInstance.hpp  Mesh.cpp  Mesh.hpp
VulkanRenderer/Source/AssetSystem/: AssetArray.cpp  AssetArray.h  AssetArray.hpp  AssetHandle.cpp  AssetHandle.h  AssetHandle.hpp  AssetManager.cpp  AssetManager.h  AssetManager.hpp  AssetSystemStructs.h
VulkanRenderer/Source/Debug/: SlangDebug.cpp  SlangDebug.hpp
VulkanRenderer/Source/Demo/LayeredMaterials/: LayeredMaterialsDemo.cpp  LayeredMaterialsDemo.hpp
VulkanRenderer/Source/ImGUI/: ImGUI.cpp  ImGUI.hpp
VulkanRenderer/Source/Input/: InputHandler.cpp  InputHandler.hpp
VulkanRenderer/Source/Renderer/: RenderSync.cpp  RenderSync.hpp
VulkanRenderer/Source/Scene/: Camera.cpp  Camera.hpp  Model.cpp  Model.hpp  Scene.cpp  Scene.hpp
VulkanRenderer/Source/Scene/Core/: Transform.cpp  Transform.hpp
VulkanRenderer/Source/Scene/Light/: BasicLights.cpp  BasicLights.hpp  CompositeLights.cpp  CompositeLights.hpp  Light.cpp  Light.hpp  LightEnvironment.cpp  LightEnvironment.hpp  PointLight.cpp  PointLight.hpp  UniversalLightEnvironment.cpp  UniversalLightEnvironment.hpp
VulkanRenderer/Source/ShaderCompilation/: ShaderCursor.cpp  ShaderCursor.hpp  ShaderObject.cpp  ShaderObject.hpp  ShaderOffset.hpp  VulkanShaderObject.cpp  VulkanShaderObject.hpp  VulkanShaderObjectLayout.cpp  VulkanShaderObjectLayout.hpp
VulkanRenderer/Textures/: license.txt
