add_executable(${PROJECT_NAME} main.cpp
        CommandQueues.hpp
        DeviceExtensions.hpp
        DeviceExtensions.hpp
        HelloTriangleApplication.cpp
        HelloTriangleApplication.hpp
        stb.hpp
        IOHelper.hpp
        PhysicalDeviceHelper.hpp
        Renderer.cpp
        Renderer.hpp
        Shader.hpp
        ShaderCompiler.hpp
        Swapchain.cpp
        Swapchain.hpp
        Image.cpp
        stb.hpp
        Uniforms.hpp
        ValidationLayers.hpp
        Vertex.hpp
        VulkanBackend.hpp
        Window.cpp
        Window.hpp
        check.hpp
        DepthImage.cpp
        DepthImage.hpp
        TextureImage.cpp
        TextureImage.hpp
        Mesh.cpp
        Mesh.hpp)