add_executable(${PROJECT_NAME} main.cpp
        CommandQueues.hpp
        DeviceExtensions.hpp
        DeviceExtensions.hpp
        HelloTriangleApplication.cpp
        HelloTriangleApplication.hpp
        stb.hpp
        IOHelper.hpp
        PhysicalDeviceHelper.hpp
        Renderer.cpp
        Renderer.hpp
        Shader.hpp
        ShaderCompiler.hpp
        Swapchain.cpp
        Swapchain.hpp
        Image.cpp
        stb.hpp
        Uniforms.hpp
        ValidationLayers.hpp
        Vertex.hpp
        VulkanBackend.hpp
        Window.cpp
        Window.hpp
        check.hpp
        DepthImage.cpp
        DepthImage.hpp
        TextureImage.cpp
        TextureImage.hpp
        Source/Asset/Mesh.cpp
        Source/Asset/Mesh.hpp
        Buffer.cpp
        Buffer.hpp
        ShaderCompiler.cpp
        Source/Scene/Scene.cpp
        Source/Scene/Scene.hpp
        Source/Scene/Model.cpp
        Source/Scene/Model.hpp
        Source/Asset/Material.cpp
        Source/Asset/Material.hpp
        Source/Scene/Light/Light.cpp
        Source/Scene/Light/Light.hpp
        Source/Scene/Light/PointLight.cpp
        Source/Scene/Light/PointLight.hpp
        Source/Scene/Core/Transform.cpp
        Source/Scene/Core/Transform.hpp
        Source/Scene/Camera.cpp
        Source/Scene/Camera.hpp
)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Source)