add_executable(${PROJECT_NAME} main.cpp
        CommandQueues.hpp
        DeviceExtensions.hpp
        DeviceExtensions.hpp
        Application.cpp
        Application.hpp
        stb.hpp
        IOHelper.hpp
        PhysicalDeviceHelper.hpp
        Renderer.cpp
        Renderer.hpp
        Shader.hpp
        ShaderCompiler.hpp
        Swapchain.cpp
        Swapchain.hpp
        Image.cpp
        stb.hpp
        Uniforms.hpp
        ValidationLayers.hpp
        Vertex.hpp
        VulkanBackend.hpp
        Window.cpp
        Window.hpp
        check.hpp
        DepthImage.cpp
        DepthImage.hpp
        TextureImage.cpp
        TextureImage.hpp
        Source/Asset/Mesh.cpp
        Source/Asset/Mesh.hpp
        Buffer.cpp
        Buffer.hpp
        ShaderCompiler.cpp
        Source/Scene/Scene.cpp
        Source/Scene/Scene.hpp
        Source/Scene/Model.cpp
        Source/Scene/Model.hpp
        Source/Asset/Material.cpp
        Source/Asset/Material.hpp
        Source/Scene/Light/Light.cpp
        Source/Scene/Light/Light.hpp
        Source/Scene/Light/PointLight.cpp
        Source/Scene/Light/PointLight.hpp
        Source/Scene/Core/Transform.cpp
        Source/Scene/Core/Transform.hpp
        Source/Scene/Camera.cpp
        Source/Scene/Camera.hpp
        Source/ShaderCompilation/ShaderCursor.cpp
        Source/ShaderCompilation/ShaderCursor.hpp
        Source/ShaderCompilation/VulkanShaderObject.cpp
        Source/ShaderCompilation/VulkanShaderObject.hpp
        Source/ShaderCompilation/ShaderObject.cpp
        Source/ShaderCompilation/ShaderObject.hpp
        Source/Renderer/RenderSync.cpp
        Source/Renderer/RenderSync.hpp
        Source/ShaderCompilation/ShaderOffset.hpp
        Source/ShaderCompilation/VulkanShaderObjectLayout.cpp
        Source/ShaderCompilation/VulkanShaderObjectLayout.hpp
        Source/Asset/MaterialInstance.cpp
        Source/Asset/MaterialInstance.hpp
        Source/Debug/SlangDebug.cpp
        Source/Debug/SlangDebug.hpp
        Source/AssetSystem/AssetManager.cpp
        Source/AssetSystem/AssetManager.hpp
        Source/AssetSystem/AssetArray.cpp
        Source/AssetSystem/AssetArray.hpp
        Source/AssetSystem/AssetHandle.cpp
        Source/AssetSystem/AssetHandle.hpp
        Source/AssetSystem/AssetSystemStructs.h
        Source/Asset/AssetBase.cpp
        Source/Asset/AssetBase.hpp
        Source/Input/InputHandler.cpp
        Source/Input/InputHandler.hpp
)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Source)